deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nginx
  template:
    metadata:
      labels:
        component: nginx
    spec:
      containers:
      - name: nginx
        image: korah91/nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: volumen-persistente
            # En esta carpeta esta el index.htmll
            mountPath: /usr/share/nginx/html/rethinkdb
        # Siempre descarga la imagen por si acaso
        imagePullPolicy: Always
      volumes:
      - name: volumen-persistente
        persistentVolumeClaim:
          claimName: volumen-reclamacion
