deployment-rethinkdb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-rethinkdb
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-rethinkdb
  template:
    metadata:
      labels:
        component: server-rethinkdb
    spec:
      containers:
      - name: server-rethinkdb
        image: rethinkdb
        ports:
        - containerPort: 28015
        volumeMounts:
          - name: volumen-persistente
            mountPath: /data/rethinkdb_data
            subPath: CARPETARETHINKDB
      volumes:
      - name: volumen-persistente
        persistentVolumeClaim:
          claimName: volumen-reclamacion
