deployment-script.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: script
spec:
  replicas: 1
  selector:
    matchLabels:
      component: script
  template:
    metadata:
      labels:
        component: script
    spec:
      containers:
      - name: script
        image: korah91/rethinkdbscript
        # Siempre descarga la imagen por si acaso
        imagePullPolicy: Always
        #ports:
        #- containerPort: 1080
