c-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: c-nginx
spec:
  type: ClusterIP
  selector:
    component: nginx
  ports:
  - port: 80
    targetPort: 80
