c-rethinkdb.yml
apiVersion: v1
kind: Service
metadata:
  name: c-rethinkdb
spec:
  type: ClusterIP
  selector:
    component: server-rethinkdb
  ports:
  - port: 28015
    targetPort: 28015
