service-nginx.yml
apiVersion: v1
kind: Service
metadata:
 name: nginx-service
spec:
 type: LoadBalancer
 ports:
 - port: 80
 selector:
  component: nginx
