service-rethinkdb.yml
apiVersion: v1
kind: Service
metadata:
 name: rethinkdb-interfaz
spec:
 type: LoadBalancer
 ports:
 - port: 8080
 selector:
  component: server-rethinkdb
