ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/use-regex: 'true' 
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: c-nginx
            port:
              number: 80
      - path: /rethinkdb/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: c-rethinkdb
            port:
              number: 80
